# geo-checker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
app/: __init__.py  main.py
app/api/: __init__.py
app/i18n/: __init__.py  en-US.json  ja-JP.json  ko-KR.json  zh-CN.json  zh-TW.json
app/routes/: analysis.py
app/static/: robots.txt  style.css
app/templates/: compare-results.html  compare.html  history.html  index.html  privacy.html  results.html  score-card.html  terms.html
docs/: AGENTS-legacy-skeleton.md  AI-COLLABORATION-PROTOCOL.md  decision-log.md  geo-writing-prompt.md
docs/rfc/: RFC-001-service-monitoring.md
docs/suggestions/: ERIKA-onboarding.md
src/: main.py
src/ai/: ai_simulator.py  live_probe.py
src/audit/: __init__.py  base.py  geo_audits.py  registry.py
src/cli/: run.py
src/config/: __init__.py  settings.py
src/db/: __init__.py  store.py
src/fetcher/: ghost_fetcher.py  html_fetcher.py  js_render_fetcher.py
src/geo/: comparator.py  geo_checker.py
src/parser/: content_parser.py
src/report/: formatter.py
src/rules/: base.py
src/scheduler/: __init__.py  rescan_scheduler.py  webhook.py
src/security/: __init__.py  url_guard.py
src/seo/: seo_checker.py
src/toolkit/: __init__.py  badge.py  checklist.py  fix_generator.py  robots_generator.py  schema_generator.py  score_card.py
tests/: conftest.py  test_smoke.py
tests/api/: test_analyze.py  test_monitoring.py  test_probe.py  test_trends.py  (+1 more)
(+40 files in other folders)
